segunda parte mejorada

--- a/sitio sena/indes.html
+++ b/sitio sena/indes.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="indes.css">
+    <link rel="icon" href="MEDIA/icono.ico">
     <title>Sitio Html Sena</title>
 
 </head>
@@ -10,7 +11,7 @@
 <body>
     <header>
         <div class="container">
-            <p class="logo">Sitio Html Sena</p>
+            <p class="logo">Sena</p>
             <nav>
                 <a href="http://127.0.0.1:5500/escudo.html">Escudo</a>
                 <a href="http://127.0.0.1:5500/logo.html">Logo</a>
@@ -21,9 +22,10 @@
             </nav>
         </div>
     </header>
+    
 
     <section id="hero">
-        <h1>Evidencia de <br> Producto </h1>
+        <h1>INDUCCIÓN DEL <br> SENA </h1>
         <form action="https://www.sena.edu.co/es-co/Paginas/default.aspx" target="_blank">
             <button type="submit" ta>Visítanos Ya!</button>
         </form>
@@ -34,8 +36,13 @@
             <div class="img-container"></div>
             <div class="texto">
                 <h2>Somos <span class="color-acento">Sena! </span></h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores doloribus repellendus ea beatae eum,
-                    sed adipisci vel aliquam debitis minima?</p>
+                <p> Es un establecimiento público de educación en Colombia que ofrece formación gratuita
+                     con programas técnicos, tecnológicos y complementarios. Está adscrito al Ministerio del 
+                     Trabajo de Colombia y goza de autonomía administrativa. <br> <br>
+                     En 1957, Rodolfo Martínez Tono le propuso al entonces ministro de Trabajo, 
+                     desarrollar un instituto de enseñanza laboral técnica, inspirado en el SENAI de Brasil. El proyecto 
+                     vio la luz mediante el Decreto-Ley 118, del 21 de junio de 1957, durante el gobierno de 
+                     la Junta Militar, tras la renuncia de Gustavo Rojas Pinilla.</p>
             </div>
         </div>
     </section>
@@ -45,8 +52,10 @@
             <div class="img-container"></div>
             <div class="texto">
                 <h3>Resumen</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptatibus hic ratione
-                    architecto aut temporibus aperiam corporis est vitae dolores?</p>
+                <p>En la inducción nos da a conocer cuáles son nuestras expectativas respecto al técnico o tecnólogo y en que nos contribuye el Sena al desarrollo de nuestro proyecto de vida también nos da a conocer si con este programa de formación que elegimos ayudamos con el desarrollo social, técnico y económico en nuestra región. <br> <br>
+                    En la inducción nos da un recorrido por el Sena y por los salones administrativos el encargado de este ambiente administrativo nos da a conocer los servicios que nos puede ofrecer. También nos dan a conocer los símbolos del SENA y su significado y nos mostraran el himno y una de las tareas era aprendérlo . <br> <br> El Sena esta tan enfocado en el futuro de nosotros que nos ofrece archivos que dice en que carrera podemos homologar y cuantos semestres. <br><br>
+                    Por último, nos mostraron las plataformas que el Sena maneja para la evaluar los aprendices y donde publican temas de técnicos o tecnólogos a futuro y nos podemos inscribir, también nos asigna un correo institucional que nos da Microsoft office 365 gratis para tener mejor experiencia en el recorrido del aprendizaje.
+                    </p>
             </div>
         </div>
     </section>
