--- a/sitio sena/indes.html
+++ b/sitio sena/indes.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="indes.css">
-    <link rel="icon" href="MEDIA/icono.ico">
+ <link rel="icon" href="MEDIA/icono1.ico">   
     <title>Sitio Html Sena</title>
 
 </head>
@@ -66,9 +66,9 @@
         <div class="container">
             <div class="img-container"></div>
             <div class="texto">
-                <h3>Proyectos</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores repellendus dignissimos consequatur
-                    nobis possimus delectus nesciunt alias harum, sint omnis.</p>
+                <h3>Proyecto</h3>
+                <p>Como mi proyecto tengo planeado realizar la elaboración de una página web que permitirán a los usuarios redactar y 
+                    estructurar sus hojas de vida (curriculum) para poder presentarlas a empresas.</p>
             </div>
         </div>
     </section>
@@ -88,3 +88,4 @@
 </body>
 
 </html>
+
