--- a/sitio sena/escudo.html
+++ b/sitio sena/escudo.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="escudo.css">
+    <link rel="icon" href="MEDIA/icono1.ico">   
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alkatra&display=swap" rel="stylesheet">
@@ -37,8 +39,10 @@
     </section>
 
     <footer>
-     <p>&Copf;Ricardo Rivera 2023</p>
+        <p>&copy;Ricardo Rivera 2023</p>
     </footer>
+
+ 
     
 </body>
 </html>
