--- a/sitio sena/escudo.html
+++ b/sitio sena/escudo.html
@@ -6,7 +6,7 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alkatra&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
     
     <title>Escudo Sena</title>
 
@@ -30,9 +30,8 @@
             <div class="img-container"></div>
             <div class="texto">
                  <h3>Escudo</h3>
-                <p>El escudo refleja los tres sectores economicos dentro de los cuales 
-                    operan: El piñon representa el sector industrial. El caduceo esta asociado al sector del 
-                    comercio y servicio. el café esta ligado al sector extractivo y primario.
+                <p>El escudo refleja los tres sectores económicos dentro de los cuales 
+                    operan: El piñón representa el sector industrial. El caduceo está asociado al sector del  comercio y servicio. El café está ligado al sector extractivo y primario.
                 </p>
             </div>
         </div>
