--- a/sitio sena/himno.html
+++ b/sitio sena/himno.html
@@ -6,7 +6,7 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alkatra&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
 
     <title>Himno Sena</title>
 
@@ -31,27 +31,22 @@
             <div class="texto">
                 <h3>Himno</h3>
                 <p> <b>Coro:</b>
-                Estudiantes del SENA, adelante!por Colombia luchad con amor con el ánimo noble y radiante transformémosla en mundo mejor. (BIS)
-                ..
+                    ¡Estudiantes del SENA, adelante! Por Colombia, luchad con amor, con el ánimo noble y radiante, transformémosla en mundo mejor. (BIS)
                 <br> <br>
                  <b>I:</b>    
-                De la patria el futuro destino en las manos del joven está.El trabajo es seguro caminoque el progreso a Colombia dará.
-                ..
+                 De la patria, el futuro destino en las manos del joven está. El trabajo es seguro camino que el progreso a Colombia dará.
                 <br> <br>
                 <b>II:</b>   
-                En la forja del SENA se forman hombres libres que anhelan triunfar.Con la ciencia y la técnica unidas nuevos rumbos de paz trazarán.
-                ..
+                En la forja del SENA se forman hombres libres que anhelan triunfar. Con la ciencia y la técnica unidas, nuevos rumbos de paz trazarán.
                 <br> <br>
                 <b>Coro:</b>
-                Estudiantes del SENA, adelante! por Colombia luchad con amor con el ánimo noble y radiante transformémosla en mundo mejor. (BIS)
-                ..
+                ¡Estudiantes del SENA, adelante! Por Colombia luchad con amor, con el ánimo noble y radiante transformémosla en mundo mejor. (BIS)
                 <br> <br>
                 <b>III:</b>
-                Hoy la patria nos grita sentida estudiantes del SENA, triunfad,sólo así lograreis en la vida más justicia, mayor libertad.
-                ..
+                Hoy la patria nos grita sentida estudiantes del SENA, triunfad, solo así lograréis en la vida más justicia, mayor libertad.
                 <br> <br>
                 <b>IV:</b> 
-                Avancemos con fuerza guerrera estudiantes con firme tesón que la patria en nosotros espera su pacífica revolución.</p>
+                Avancemos con fuerza guerrera, estudiantes, con firme tesón que la patria en nosotros espera su pacífica revolución.</p>
             </div>
         </div>
     </section>
