--- a/sitio sena/indes.html
+++ b/sitio sena/indes.html
@@ -4,7 +4,11 @@
 <head>
     <link rel="stylesheet" href="indes.css">
  <link rel="icon" href="MEDIA/icono1.ico">   
-    <title>Sitio Html Sena</title>
+    <title>Sena Inducción</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
 
 </head>
 
@@ -27,7 +31,7 @@
     <section id="hero">
         <h1>INDUCCIÓN DEL <br> SENA </h1>
         <form action="https://www.sena.edu.co/es-co/Paginas/default.aspx" target="_blank">
-            <button type="submit" ta>Visítanos Ya!</button>
+            <button type="submit" ta>¡Visítanos Ya!</button>
         </form>
     </section>
 
@@ -35,7 +39,7 @@
         <div class="container">
             <div class="img-container"></div>
             <div class="texto">
-                <h2>Somos <span class="color-acento">Sena! </span></h2>
+                <h2>¡Somos <span class="color-acento">Sena! </span></h2>
                 <p> Es un establecimiento público de educación en Colombia que ofrece formación gratuita
                      con programas técnicos, tecnológicos y complementarios. Está adscrito al Ministerio del 
                      Trabajo de Colombia y goza de autonomía administrativa. <br> <br>
@@ -52,9 +56,9 @@
             <div class="img-container"></div>
             <div class="texto">
                 <h3>Resumen</h3>
-                <p>En la inducción nos da a conocer cuáles son nuestras expectativas respecto al técnico o tecnólogo y en que nos contribuye el Sena al desarrollo de nuestro proyecto de vida también nos da a conocer si con este programa de formación que elegimos ayudamos con el desarrollo social, técnico y económico en nuestra región. <br> <br>
-                    En la inducción nos da un recorrido por el Sena y por los salones administrativos el encargado de este ambiente administrativo nos da a conocer los servicios que nos puede ofrecer. También nos dan a conocer los símbolos del SENA y su significado y nos mostraran el himno y una de las tareas era aprendérlo . <br> <br> El Sena esta tan enfocado en el futuro de nosotros que nos ofrece archivos que dice en que carrera podemos homologar y cuantos semestres. <br><br>
-                    Por último, nos mostraron las plataformas que el Sena maneja para la evaluar los aprendices y donde publican temas de técnicos o tecnólogos a futuro y nos podemos inscribir, también nos asigna un correo institucional que nos da Microsoft office 365 gratis para tener mejor experiencia en el recorrido del aprendizaje.
+                <p> En la inducción nos da a conocer cuáles son nuestras expectativas respecto al técnico o tecnólogo y en que nos contribuye el Sena al desarrollo de nuestro proyecto de vida, también nos da a conocer si con este programa de formación que elegimos ayudamos con el desarrollo social, técnico y económico en nuestra región. <br> <br>
+                    En la inducción nos da un recorrido por el Sena y nos da a conocer   los salones administrativos, el encargado de este ambiente administrativo nos da a conocer los servicios que nos puede ofrecer. También nos dan a conocer los símbolos del SENA y su significado y nos mostrarán el himno y una de las tareas es aprenderlo. <br><br>  El Sena está tan enfocado en el futuro de nosotros que nos ofrece archivos que dice en que carrera podemos homologar y cuantos semestres. 
+                    Por último, nos mostraron las plataformas que el Sena maneja para evaluar los aprendices y donde publican temas de técnicos o tecnólogos a futuro y nos podemos inscribir, también nos asigna un correo institucional que nos da Microsoft office 365 gratis para tener mejor experiencia en el recorrido del aprendizaje.
                     </p>
             </div>
         </div>
