--- a/sitio sena/bandera.html
+++ b/sitio sena/bandera.html
@@ -6,7 +6,7 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alkatra&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
 
     <title>Bandera Sena</title>
 
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="container">
-            <p class="logo">bandera del Sena</p>
+            <p class="logo">Bandera del Sena</p>
             <nav>
                 <a href="http://127.0.0.1:5500/escudo.html">Escudo</a>
                 <a href="http://127.0.0.1:5500/logo.html">Logo</a>
@@ -30,9 +30,8 @@
             <div class="img-container"></div>
             <div class="texto">
                 <h3>Bandera</h3>
-                <p>El escudo y la bandera del SENA, fueron diseñados cuando se fundó la institución y reflejan los tres sectores económicos dentro de 
-                    los cuales operamos: El piñón, representativo del sector industria. El caduceo, asociado al de comercio y servicios.
-                     El café, ligado al primario y extractivo.</p>
+                <p>El escudo refleja los tres sectores económicos dentro de los cuales 
+                    operan: El piñón representa el sector industrial. El caduceo está asociado al sector del  comercio y servicio. El café está ligado al sector extractivo y primario.</p>
             </div>
         </div>
     </section>
