--- a/sitio sena/indes.html
+++ b/sitio sena/indes.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="container">
-            <p class="logo">Sena</p>
+            <a href="#" class="logo">Sena</a>
             <nav>
                 <a href="http://127.0.0.1:5500/escudo.html">Escudo</a>
                 <a href="http://127.0.0.1:5500/logo.html">Logo</a>
