--- a/sitio sena/escudo.html
+++ b/sitio sena/escudo.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="container">
-            <p class="logo">Escudo de  Sena</p>
+            <a href="#" class="logo">Escudo de  Sena</a>
             <nav>
                 <a href="http://127.0.0.1:5500/logo.html">Logo</a>
                 <a href="http://127.0.0.1:5500/himno.html">Himno</a>
