--- a/sitio sena/bandera.html
+++ b/sitio sena/bandera.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="container">
-            <p class="logo">Bandera del Sena</p>
+            <a href="#" class="logo">Bandera del Sena</a>
             <nav>
                 <a href="http://127.0.0.1:5500/escudo.html">Escudo</a>
                 <a href="http://127.0.0.1:5500/logo.html">Logo</a>
