--- a/sitio sena/escudo.html
+++ b/sitio sena/escudo.html
@@ -16,10 +16,10 @@
         <div class="container">
             <a href="#" class="logo">Escudo de  Sena</a>
             <nav>
-                <a href="http://127.0.0.1:5500/logo.html">Logo</a>
-                <a href="http://127.0.0.1:5500/himno.html">Himno</a>
-                <a href="http://127.0.0.1:5500/bandera.html">Bandera</a>
-                <a href="http://127.0.0.1:5500/indes.html#Proyectos" target="_blank">General</a>
+                <a href="logo.html">Logo</a>
+                <a href="himno.html">Himno</a>
+                <a href="bandera.html">Bandera</a>
+                <a href="indes.html" target="_blank">General</a>
 
             </nav>
         </div>
