--- a/sitio sena/indes.html
+++ b/sitio sena/indes.html
@@ -17,10 +17,10 @@
         <div class="container">
             <a href="#" class="logo">Sena</a>
             <nav>
-                <a href="http://127.0.0.1:5500/escudo.html">Escudo</a>
-                <a href="http://127.0.0.1:5500/logo.html">Logo</a>
-                <a href="http://127.0.0.1:5500/himno.html">Himno</a>
-                <a href="http://127.0.0.1:5500/bandera.html">Bandera</a>
+                <a href="escudo.html">Escudo</a>
+                <a href="logo.html">Logo</a>
+                <a href="himno.html">Himno</a>
+                <a href="bandera.html">Bandera</a>
                 <a href="#Resumen">Resumen</a>
                 <a href="#Proyectos">Proyectos</a>
             </nav>
