--- a/sitio sena/logo.html
+++ b/sitio sena/logo.html
@@ -16,10 +16,10 @@
         <div class="container">
             <a href="#" class="logo">Logo del Sena</a>
             <nav>
-                <a href="http://127.0.0.1:5500/escudo.html">Escudo</a>
-                <a href="http://127.0.0.1:5500/himno.html">Himno</a>
-                <a href="http://127.0.0.1:5500/bandera.html">Bandera</a>
-                <a href="http://127.0.0.1:5500/indes.html#Proyectos" >General</a>
+                <a href="escudo.html">Escudo</a>
+                <a href="himno.html">Himno</a>
+                <a href="bandera.html">Bandera</a>
+                <a href="indes.html" >General</a>
 
             </nav>
         </div>
