--- a/sitio sena/logo.html
+++ b/sitio sena/logo.html
@@ -32,7 +32,7 @@
                 <h3>logo</h3>
                 <p>Representa los caminos que el aprendiz puede tomar para seguir adelante enfocadas a la formación del hombre para una buena calidad de vida.
                     <br> <br>
-                    Así mismo tambiín representa la responsabilidad que debe tener el aprendiz con su propio proceso de aprendizaje.
+                    Así mismo tambíen representa la responsabilidad que debe tener el aprendiz con su propio proceso de aprendizaje.
                 </p>
             </div>
         
