--- a/sitio sena/himno.html
+++ b/sitio sena/himno.html
@@ -19,6 +19,8 @@
                 <a href="escudo.html">Escudo</a>
                 <a href="logo.html">Logo</a>
                 <a href="bandera.html">Bandera</a>
+                <a href="resumen.html">Resumen</a>
+                <a href="proyecto.html">Proyectos</a>
                 <a href="indes.html">General</a>
 
             </nav>
