--- a/sitio sena/indes.html
+++ b/sitio sena/indes.html
@@ -21,8 +21,8 @@
                 <a href="logo.html">Logo</a>
                 <a href="himno.html">Himno</a>
                 <a href="bandera.html">Bandera</a>
-                <a href="#Resumen">Resumen</a>
-                <a href="#Proyectos">Proyectos</a>
+                <a href="resumen.html">Resumen</a>
+                <a href="proyecto.html">Proyectos</a>
             </nav>
         </div>
     </header>
@@ -50,34 +50,6 @@
             </div>
         </div>
     </section>
-
-    <section id="Resumen">
-        <div class="container">
-            <div class="img-container"></div>
-            <div class="texto">
-                <h3>Resumen</h3>
-                <p> En la inducción nos da a conocer cuáles son nuestras expectativas respecto al técnico o tecnólogo y en que nos contribuye el Sena al desarrollo de nuestro proyecto de vida, también nos da a conocer si con este programa de formación que elegimos ayudamos con el desarrollo social, técnico y económico en nuestra región. <br> <br>
-                    En la inducción nos da un recorrido por el Sena y nos da a conocer   los salones administrativos, el encargado de este ambiente administrativo nos da a conocer los servicios que nos puede ofrecer. También nos dan a conocer los símbolos del SENA y su significado y nos mostrarán el himno y una de las tareas es aprenderlo. <br><br>  El Sena está tan enfocado en el futuro de nosotros que nos ofrece archivos que dice en que carrera podemos homologar y cuantos semestres. 
-                    Por último, nos mostraron las plataformas que el Sena maneja para evaluar los aprendices y donde publican temas de técnicos o tecnólogos a futuro y nos podemos inscribir, también nos asigna un correo institucional que nos da Microsoft office 365 gratis para tener mejor experiencia en el recorrido del aprendizaje.
-                    </p>
-            </div>
-        </div>
-    </section>
-
-
-
-    <section id="Proyectos">
-        <div class="container">
-            <div class="img-container"></div>
-            <div class="texto">
-                <h3>Proyecto</h3>
-                <p>Como mi proyecto tengo planeado realizar la elaboración de una página web que permitirán a los usuarios redactar y 
-                    estructurar sus hojas de vida (curriculum) para poder presentarlas a empresas.</p>
-            </div>
-        </div>
-    </section>
-
-
 
     <footer>
       <p>&copy;Ricardo Rivera 2023</p>
