--- a/sitio sena/logo.html
+++ b/sitio sena/logo.html
@@ -19,6 +19,8 @@
                 <a href="escudo.html">Escudo</a>
                 <a href="himno.html">Himno</a>
                 <a href="bandera.html">Bandera</a>
+                <a href="resumen.html">Resumen</a>
+                <a href="proyecto.html">Proyectos</a>
                 <a href="indes.html" >General</a>
 
             </nav>
