--- a/sitio sena/bandera.html
+++ b/sitio sena/bandera.html
@@ -21,7 +21,7 @@
                 <a href="himno.html">Himno</a>
                 <a href="resumen.html">Resumen</a>
                 <a href="proyecto.html">Proyectos</a>
-                <a href="indes.html">General</a>
+                <a href="index.html">General</a>
 
             </nav>
         </div>
