--- a/sitio sena/proyecto.html
+++ b/sitio sena/proyecto.html
@@ -22,7 +22,7 @@
                 <a href="himno.html">Himno</a>
                 <a href="bandera.html">Bandera</a>
                 <a href="resumen.html">Resumen</a>
-                <a href="indes.html">General</a>
+                <a href="index.html">General</a>
             </nav>
         </div>
     </header>
