--- a/sitio sena/resumen.html
+++ b/sitio sena/resumen.html
@@ -20,7 +20,7 @@
                 <a href="logo.html">Logo</a>
                 <a href="bandera.html">Bandera</a>
                 <a href="proyecto.html">Proyectos</a>
-                <a href="indes.html">General</a>
+                <a href="index.html">General</a>
 
             </nav>
         </div>
